--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Policy and Regulation Course</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="/workspaces/AI-Policy.github.io/styles.css" href="styles.css">
 </head>
 <body>
     <header>
