--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Policy and Regulation Course</title>
-    <link rel="/workspaces/AI-Policy.github.io/styles.css" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
     </nav>
 
     <section id="overview">
-        <div class="container">
+        <div class="container session">
             <h2>Course Overview and Rationale</h2>
             <p>The rapid development and deployment of Artificial Intelligence (AI) technologies have disrupted traditional legal frameworks, making existing legislation and case law obsolete or conflicting with new AI capabilities. This course explores the new legal paradigms and addresses the urgent need to regulate these gaps and establish technical and safety agreements in AI, which pose unique challenges and opportunities for policymakers and regulators. The course focuses on the different legislative approaches adopted by key global players, including the United States, the European Union, the United Kingdom, China, and the framework of international agreements. By examining these diverse regulatory environments, participants will gain a comprehensive understanding of how different regions address the ethical, economic, safety, and social implications of AI technologies while trying to promote innovation. By the end of this course, participants will have a strong understanding of the nuanced implications and challenges of AI on key pre-existing laws and how different regions are attempting to shape the future of AI and mitigate current legal and social concerns.</p>
         </div>
@@ -220,9 +220,8 @@
     <footer>
         <div class="container">
             <h2>Contact Us</h2>
-            <p>For more information, please contact us at <a href="marcel.mir.t@gmail.com">marcel.mir.t@gmail.com</a>.</p>
+            <p>For more information, please contact us at <a href="mailto:info@aipolicycourse.com">info@aipolicycourse.com</a>.</p>
         </div>
     </footer>
 </body>
 </html>
-
