--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
         <div class="container">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#sessions">Sessions</a></li>
+                <li><a href="#session1">Session 1</a></li>
+                <li><a href="#session2">Session 2</a></li>
+                <li><a href="#session3">Session 3</a></li>
+                <li><a href="#session4">Session 4</a></li>
+                <li><a href="#session5">Session 5</a></li>
+                <li><a href="#session6">Session 6</a></li>
+                <li><a href="#session7">Session 7</a></li>
+                <li><a href="#session8">Session 8</a></li>
+                <li><a href="#session9">Session 9</a></li>
+                <li><a href="#session10">Session 10</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -33,9 +42,9 @@
 
     <section id="sessions">
         <div class="container">
-            <h2>Sessions</h2>
+            <h2 class="centered">Sessions</h2>
 
-            <div class="session">
+            <div id="session1" class="session">
                 <h3>Session 1: AI Policy Introduction</h3>
                 <p>This session lays the groundwork for the course by introducing key areas of conflict with existing laws, legal principles, and key challenges of AI for regulators that will be explored. This session sets the stage for deeper discussions on how different regions approach AI governance.</p>
                 <h4>Readings:</h4>
@@ -48,7 +57,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session2" class="session">
                 <h3>Session 2: Data Privacy Regulations</h3>
                 <p>This session focuses on the crucial aspect of data privacy in the context of AI. Participants will explore how AI technologies intersect with data privacy laws, the challenges of ensuring data protection in AI training and applications, and the strategies for compliance with regulations like the GDPR and CCPA.</p>
                 <h4>Readings:</h4>
@@ -74,7 +83,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session3" class="session">
                 <h3>Session 3: Intellectual Property (IP) Rights</h3>
                 <p>This session addresses the conflicts and synergies between AI technologies and intellectual property rights, particularly copyright. Participants will examine how AI-generated content challenges existing IP frameworks and explore potential solutions for harmonizing AI innovations with IP laws. This session also explores the different approaches and interpretation of copyright protection across key jurisdictions for text and data mining practices used to gather data to train AI models.</p>
                 <h4>Readings:</h4>
@@ -102,7 +111,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session4" class="session">
                 <h3>Session 4: AI Use in Decision-Making Tools & Processes</h3>
                 <p>This session will cover the risks and challenges of the adoption of AI in decision-making processes across various fields such as employment law, the judicial system, credit and lending, and housing and real estate. Participants will explore how these products can exploit existing regulations (such as anti-discriminatory laws or the right to an explanation), their social implications, the opacity of their decision-making processes, and regulatory challenges. Participants will be exposed to recent examples of AI decision-making tools that were proved to be biased or highly inaccurate.</p>
                 <h4>Readings:</h4>
@@ -124,7 +133,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session5" class="session">
                 <h3>Session 5: Liability Allocation</h3>
                 <p>In this session, we will explore the complex and critical issue of liability allocation in the context of Artificial Intelligence (AI) systems. As AI technologies become increasingly integrated into various sectors, determining who is responsible when these systems cause harm or fail to perform as expected becomes paramount. This includes establishing the liability regime for downstream developers and “fine-tuners” of frontier models and a duty of care for the main developer to oversee the downstream uses of its system. Clear liability allocation is an essential legal requirement for the effective and successful implementation of all legal frameworks across every domain. This session will examine the different legal frameworks and approaches to allocating liability for AI-induced damages, considering perspectives from various jurisdictions. Participants will delve into the key challenges of attributing liability and different liability models and their applicability in the context of AI.</p>
                 <h4>Readings:</h4>
@@ -140,7 +149,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session6" class="session">
                 <h3>Session 6: The US Landscape</h3>
                 <p>In this session, we will delve into the regulatory framework and current plans for governing AI in the United States. This session will also touch on key legislation, federal guidelines, and key US concerns.</p>
                 <h4>Readings:</h4>
@@ -152,7 +161,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session7" class="session">
                 <h3>Session 7: The EU Framework & The EU AI Act</h3>
                 <p>This session will focus on the European Union’s AI Act, one of the pioneer regulations worldwide, and how it addresses the initial EU concerns with AI products. Participants will learn about the Act's scope, history, evolution, and rationale, its categorization of AI risks, requirements for high-risk AI systems, and implications for the commercialization of AI products. The session will also discuss the global impact of the EU AI Act as a potential standard-setter in AI regulation.</p>
                 <h4>Readings:</h4>
@@ -178,7 +187,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session8" class="session">
                 <h3>Session 8: The UK</h3>
                 <p>Post-Brexit, the UK has been carving its path in AI regulation. This session will examine the UK's key role and huge importance within AI and its approach to AI governance. We will discuss specific regulatory initiatives such as the UK’s National AI Strategy and how these policies support the UK's vision to be a leader in AI and AI safety research.</p>
                 <h4>Readings:</h4>
@@ -189,7 +198,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session9" class="session">
                 <h3>Session 9: China & Their Fragmented Approach to AI Regulations</h3>
                 <p>This session focuses on China's unique approach to AI regulation. Despite the extended belief in an existing obscurity and lack of regulation of AI in China, China has been promoting and adopting a regulatory approach similar to the EU. This includes a particular focus on regulating the commercialization of AI products and protecting Chinese citizens from the negative effects of such technology. We will discuss how China's AI strategies affect international AI dynamics.</p>
                 <h4>Readings:</h4>
@@ -202,7 +211,7 @@
                 </ul>
             </div>
 
-            <div class="session">
+            <div id="session10" class="session">
                 <h3>Session 10: International Agreements</h3>
                 <p>The final session explores the role of international agreements in governing AI and the global efforts that have been placed so far in this direction. As AI technologies do not respect national borders, international cooperation is crucial. We will discuss existing frameworks like the OECD AI Principles, potential global treaties, and the challenges of achieving international consensus on AI standards.</p>
                 <h4>Readings:</h4>
@@ -220,7 +229,7 @@
     <footer>
         <div class="container">
             <h2>Contact Us</h2>
-            <p>For more information, please contact us at <a href="mailto:info@aipolicycourse.com">info@aipolicycourse.com</a>.</p>
+            <p>For more information, please contact us at <a href="marcel.mir.t@gmail.com">marcel.mir.t@gmail.com</a>.</p>
         </div>
     </footer>
 </body>
