--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
         <div class="container">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#session1">Session 1</a></li>
-                <li><a href="#session2">Session 2</a></li>
-                <li><a href="#session3">Session 3</a></li>
-                <li><a href="#session4">Session 4</a></li>
-                <li><a href="#session5">Session 5</a></li>
-                <li><a href="#session6">Session 6</a></li>
-                <li><a href="#session7">Session 7</a></li>
-                <li><a href="#session8">Session 8</a></li>
-                <li><a href="#session9">Session 9</a></li>
-                <li><a href="#session10">Session 10</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Sessions</a>
+                    <div class="dropdown-content">
+                        <a href="#session1">Session 1: AI Policy Introduction</a>
+                        <a href="#session2">Session 2: Data Privacy Regulations</a>
+                        <a href="#session3">Session 3: Intellectual Property (IP) Rights</a>
+                        <a href="#session4">Session 4: AI Use in Decision-Making Tools & Processes</a>
+                        <a href="#session5">Session 5: Liability Allocation</a>
+                        <a href="#session6">Session 6: The US Landscape</a>
+                        <a href="#session7">Session 7: The EU Framework & The EU AI Act</a>
+                        <a href="#session8">Session 8: The UK</a>
+                        <a href="#session9">Session 9: China & Their Fragmented Approach to AI Regulations</a>
+                        <a href="#session10">Session 10: International Agreements</a>
+                    </div>
+                </li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -232,5 +237,22 @@
             <p>For more information, please contact us at <a href="marcel.mir.t@gmail.com">marcel.mir.t@gmail.com</a>.</p>
         </div>
     </footer>
+
+    <script>
+        document.querySelector('.dropbtn').addEventListener('click', function() {
+            document.querySelector('.dropdown-content').classList.toggle('show');
+        });
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                for (var i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
 </body>
 </html>
