--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="overview">
         <div class="container session">
-            <h2>Course Overview and Rationale</h2>
+            <h2>Course Overview</h2>
             <p>The rapid development and deployment of Artificial Intelligence (AI) technologies have disrupted traditional legal frameworks, making existing legislation and case law obsolete or conflicting with new AI capabilities.</p>
             <p>This course explores:
                 <br>(1) This new legal paradigm and the urgent need to regulate these gaps and establish technical and safety agreements in AI.
