--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>AI Policy and Regulation: Navigating Global and Local Dynamics</h1>
-            <p>Explore the multifaceted landscape of AI policy and regulation across the globe.</p>
+            <h1>AI Policy and Regulation: Navigating the main regulations impacting AI development and deployment</h1>
+            <p>Explore the legal concerns and regulatory proposals for AI.</p>
         </div>
     </header>
 
