--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>AI Policy and Regulation: Navigating the main regulations impacting AI development and deployment</h1>
-            <p>Explore the legal concerns and regulatory proposals for AI.</p>
+            <h1>AI Policy and Regulation: Explore the legal concerns and regulatory proposals for AI </h1>
+            <p> Navigate the main regulations expected to impact AI development and deployment</p>
         </div>
     </header>
 
