--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <ul>
                     <li><a href="https://gdpr-info.eu/">GDPR Overview</a></li>
                     <li><a href="https://oag.ca.gov/privacy/ccpa">CCPA Overview</a></li>
-                    <li>GDPR Articles:
+                    <li><a href="https://journals.internationalrasd.org/index.php/ctls/article/view/1633/1059">Right to Privacy and the Growing scope of AI</a></li>
+                </ul>
+                    <h4>GDPR Articles:</h4>
                         <ul>
                             <li>Article 5: Data Processing Principles</li>
                             <li>Article 6: Lawfulness of Processing</li>
