--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                     <li><a href="https://gdpr-info.eu/">GDPR Overview</a></li>
                     <li><a href="https://oag.ca.gov/privacy/ccpa">CCPA Overview</a></li>
                     <li><a href="https://journals.internationalrasd.org/index.php/ctls/article/view/1633/1059">Right to Privacy and the Growing scope of AI</a></li>
+                    <li><a href="https://sciendo.com/article/10.2478/eustu-2022-0003">Lacunas in the EU GDPR & proposed AI Regulation</a></li>
+
                 </ul>
                 <h4>GDPR Articles:</h4>
                 <ul>
