--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <div id="session5" class="session">
                 <h3>Session 5: Liability Allocation</h3>
-                <p>In this session, we will explore the complex and critical issue of liability allocation in the context of Artificial Intelligence (AI) systems. As AI technologies become increasingly integrated into various sectors, determining who is responsible when these systems cause harm or fail to perform as expected becomes paramount. This includes establishing the liability regime for downstream developers and “fine-tuners” of frontier models and a duty of care for the main developer to oversee the downstream uses of its system. Clear liability allocation is an essential legal requirement for the effective and successful implementation of all legal frameworks across every domain. This session will examine the different legal frameworks and approaches to allocating liability for AI-induced damages, considering perspectives from various jurisdictions. Participants will delve into the key challenges of attributing liability and different liability models and their applicability in the context of AI.</p>
+                <p>In this session, we will explore the complex and critical issue of liability allocation in the context of Artificial Intelligence (AI) systems. As AI technologies become increasingly integrated into various sectors, determining who is responsible when these systems cause harm or fail to perform as expected becomes paramount. This includes establishing the liability regime for downstream developers and “fine-tuners” of frontier models and a duty of care for the main developer to oversee the downstream uses of its system. Clear liability allocation is an essential legal requirement for the effective and successful implementation of all legal frameworks across every domain. This session will examine the different legal frameworks and approaches to allocating liability for AI-induced damages, considering perspectives from various jurisdictions. Participants will dive into the key challenges of attributing liability, different liability models and their applicability in the context of AI.</p>
                 <h4>Readings:</h4>
                 <ul>
                     <li><a href="https://www.jair.org/index.php/jair/article/view/14565">Journal of AI Research: Liability in AI</a></li>
@@ -157,7 +157,7 @@
 
             <div id="session6" class="session">
                 <h3>Session 6: The US Landscape</h3>
-                <p>In this session, we will delve into the regulatory framework and current plans for governing AI in the United States. This session will also touch on key legislation, federal guidelines, and key US concerns.</p>
+                <p>In this session, we will overview the regulatory framework and current plans for governing AI in the United States. This session will also touch on key legislation, federal guidelines, and key US concerns.</p>
                 <h4>Readings:</h4>
                 <ul>
                     <li><a href="https://www.cisa.gov/ai/recent-efforts">CISA: Recent Efforts in AI</a></li>
